# Jewelry-Management

./: .gitignore  GoldenSMC.lnk  README.md  app.py  filedirectory  pyproject.toml  requirements.txt  run.py  run_batch.bat  vercel.json
api/: app.py
forms/: forms.py
instance/: jewelry_app.db
migrations/versions/: 30c7ec425ef3_add_fields_to_soldproduct_model.py  720f5f19d2f9_initial_migration.py  ac0d13dd9245_recreate_sold_product_table_with_date_.py  c98d221ef58d_initial_migration.py
models/: database.py
static/css/: style.css
static/js/: script.js
templates/: add_expense.html  add_product.html  admin_power.html  available_inventory.html  batch_print.html  catalog.html  confirm_remove.html  create_user.html  customer_report.html  dashboard.html  edit_product.html  edit_users  expense_list.html  financial_report.html  inventory.html  inventory_report.html  inventory_tree.html  inventory_tree_content.html  layout.html  login.html  pos_view.html  products.html  reports.html  sales_report.html  sales_revenue.html  sold_product.html  update_gold_prices.html  user_profiles.html  view_product.html  view_sold_product.html
