
[tool.poetry]
name = "jewelry-business-webapp"
version = "0.1.0"
description = "A web application for jewelry management."
authors = ["Narvin <narvin_castro@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "your_package_name" }]


[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.13.2"
asn1crypto = "1.5.1"
beautifulsoup4 = "4.12.3"
blinker = "1.8.2"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.1.0"
click = "8.1.3"
colorama = "0.4.6"
Deprecated = "1.2.14"
Flask-Limiter = "3.8.0"
Flask-Login = "0.6.2"
Flask-Migrate = "4.0.7"
flask-talisman = "1.1.0"
Flask-WTF = "1.2.1"
gevent = "23.9.1"
greenlet = "3.0.3"
gunicorn = "23.0.0"
idna = "3.4"
importlib_resources = "6.4.5"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
limits = "3.13.0"
Mako = "1.3.5"
Markdown = "3.4.4"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
mdurl = "0.1.2"
ordered-set = "4.1.0"
packaging = "24.1"
pg8000 = "1.31.2"
pillow = "10.4.0"
psycopg2-binary = "*"
python-dotenv = "1.0.1"
requests = "2.31.0"
rich = "13.9.2"
setuptools = "72.2.0"
soupsieve = "2.3.2"
urllib3 = "2.0.4"
waitress = "2.1.2"
Werkzeug = "2.3.7"
wheel = "0.40.0"
wrapt = "1.16.0"
WTForms = "3.0.1"
python-barcode = "0.13.1"
pytz = "^2024.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
